:memo: 更新自己做过的弯路